# transport/staff.go
@@ -38,6 +38,34 @@ func GetStaff(ctx *gin.Context) {
 	})
 }
 
+// GetStaffByOwnerWallet godoc
+// @Summary      Get staff details by owner
+// @Description  Get staff details by owner
+// @Tags         staffs
+// @Accept       json
+// @Produce      json
+// @Param        id   path      string  true  "Staff Owner Wallet Address"
+// @Success      200      {object}  response.StaffResponse
+// @Failure      400      {object}  response.MessageAPIResponse "Invalid data. Please try again."
+// @Failure      500      {object}  response.MessageAPIResponse "There is something wrong in the system during the process. Please try again later."
+// @Router       /staffs/owner/{id} [get]
+func GetStaffByOwnerWallet(ctx *gin.Context) {
+	service, err := business.GenerateStaffService()
+	if err != nil {
+		util.ProcessResponse(util.GenerateInvalidRequestAndSystemProblemModel(ctx, err))
+		return
+	}
+
+	res, err := service.GetStaffByOwnerWallet(ctx.Param("id"), ctx)
+	util.ProcessResponse(response.APIResponse{
+		Data1:    res,
+		Data2:    res,
+		ErrMsg:   err,
+		Context:  ctx,
+		PostType: action_type.NON_POST,
+	})
+}
+
 // GetStaffs godoc
 // @Summary      List staffs
 // @Description  Retrieves a list of staffs based on filter criteria
